fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,9 @@ body {
   margin: 0;
   display: flex;
   /* place-items: center; */
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
   font-family: 'Space Mono', monospace;
-  padding-top:58px
 }
 
 h1 {
